--- a/Leaf1_Specific.cfg
+++ b/Leaf1_Specific.cfg
@@ -2,6 +2,7 @@ hostname leaf1
 !
 interface Management1
    ip address 192.168.1.121/24
+   description Hello Milano
 
 interface Ethernet1
    ip address 10.10.1.2/30
